@@ -1,6 +1,7 @@
 import { Injectable } from '@angular/core';
 import { HttpClient } from '@angular/common/http';
 import { AccessTokenService } from '../access-token.service';
+import { DateTimeHelper } from '@helpers/datetimehelper/datetime.helper';
 
 @Injectable({
   providedIn: 'root'
@@ -15,20 +16,16 @@ export class AuthTrackContributorService {
   getTracksBetweenDates(fromDate, toDate, fromHour, targets) {
     let _fromDate = new Date(fromDate.getFullYear(), fromDate.getMonth(), fromDate.getDate(), fromHour, 0, 0);
     let _toDate = new Date(toDate.getFullYear(), toDate.getMonth(), toDate.getDate() + 1, fromHour, 0, 0);
-    // if (fromHour <= this.getUTCTimeDifference()) {
-    //   _fromDate = new Date(date.getFullYear(), date.getMonth(), fromDate.getDate(), fromHour, 0, 0);
-    //   _toDate = new Date(date.getFullYear(), date.getMonth(), toDate.getDate() + 1, fromHour, 0, 0);
-    // }
+    _fromDate = DateTimeHelper.getDateWithCurrentTimezone(_fromDate);
+    _toDate = DateTimeHelper.getDateWithCurrentTimezone(_toDate);
     return this.http.post('/api/auth-stores/track-contributors/tracks-between-dates', {fromDate: _fromDate, toDate: _toDate, targets} , this.accessTokenService.getAccessToken());
   }
   getTodayTrack(fromHour) {
     let date = new Date;
     let fromDate = new Date(date.getFullYear(), date.getMonth(), date.getDate(), fromHour, 0, 0);
     let toDate = new Date(date.getFullYear(), date.getMonth(), date.getDate() + 1, fromHour, 0, 0);
-    // if (fromHour <= this.getUTCTimeDifference()) {
-    //   fromDate = new Date(date.getFullYear(), date.getMonth(), date.getDate(), fromHour, 0, 0);
-    //   toDate = new Date(date.getFullYear(), date.getMonth(), date.getDate() + 1, fromHour, 0, 0);
-    // }
+    fromDate = DateTimeHelper.getDateWithCurrentTimezone(fromDate);
+    toDate = DateTimeHelper.getDateWithCurrentTimezone(toDate);
     return this.http.post('/api/auth-stores/track-contributors/today-track', {fromDate, toDate}, this.accessTokenService.getAccessToken());
   }
   addNewTrack(obj) {
