@@ -4,6 +4,11 @@
 
 - v1.0.1070                                 -
 ---------------------------------------------
+- 2021-02-03                                -
+---------------------------------------------
+.: WSM: BugFix: Timezone issue when requesting of today analysis (WSM-301)
+
+---------------------------------------------
 - 2021-02-02                                -
 ---------------------------------------------
 .: WSM: BugFix: Update to support timezone (WSM-270)
